# master-code

./: .gitignore  4D-STEM_data_inspection.ipynb  GaAs.cif  README.md  SPED preprocessing.ipynb  SPED_preprocessing_2.ipynb  SPED_preprocessing_4D-STEM.ipynb  Templatematching.ipynb  pyproject.toml  read-dm3.ipynb
2100F/notebooks/: 01_SPED_preprocessing.ipynb  01_template_matching_rois.ipynb  02_create_rois.ipynb  03_template_matching_rois.ipynb  SPED_preprocessing_fast.ipynb  SPED_preprocessing_inspecting.ipynb  Templatematching.ipynb  Templatematching_fast.ipynb
2100F/results/: orientation_trajectory_results.pkl  roi_by_tilt.json
2100F/src/: axis_angle.py  orientation_trajectory_selection.py  roi_utils.py  stereographic_tools.py  template_matching.py
GARM/notebooks/: 02_create_rois.ipynb
examples/: Templatematching.ipynb
notebooks/: 01_SPED_preprocessing_2100F.ipynb  03_create_rois.ipynb  04_template_matching_rois.ipynb  Templatematching.ipynb
results/: orientation_trajectory_diagnostics_2100F.pkl  polar_rois_orientation_trajectory_diagnostics_GARM.pkl  polar_rois_representative_pixels_roi_GARM.pkl  polar_rois_trajectory_results_GARM.pkl  representative_pixels_roi_2100F.pkl  roi_by_tilt_GARM.json  roi_xmaps_GARM.pkl
results/simulation_library/: grid.pkl
src/: orientation_trajectory_selection.py  preprocessing.py  roi_utils.py  stereographic_tools.py  template_matching.py
