[project]
name = "templatematching-nw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperspy>=2.3.0",
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "matplotlib>=3.10.7",
    "nexusformat>=2.0.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyqt6>=6.10.0",
    "pyxem>=0.21.0",
    "rosettasciio>=0.10.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "diffsims>=0.6.0",
    "ipywidgets>=8.1.7",
]
